# nosrelay

./: .gitignore  DEPLOYING.md  Dockerfile  README.md  compose.yml  push_vanish_request.ts  run_integration_tests.sh  run_tests.sh  start.sh  test_ci_workflow_on_mac.sh
.github/workflows/: ci.yml  publish-docker-image.yml  run-tests.yml
event_deleter/: Cargo.toml  README.md
event_deleter/src/: analyzer_worker.rs  deletion_task.rs  event_analyzer.rs  lib.rs  relay_commander.rs  vanish_listener_task.rs  vanish_subscriber_task.rs  worker_pool.rs
scripts/: tag_as_news.sh  tag_as_stable.sh
spam_filter/: Cargo.toml  README.md  test.jsonl
spam_filter/src/: analyzer_worker.rs  deletion_task.rs  event_analyzer.rs  lib.rs  relay_commander.rs  worker_pool.rs
strfry/config/: strfry.conf
strfry/plugins/: allowed_rules.js  broadcast_vanish_requests.ts  nos_policy.ts  policies.ts  pubkey_cache.ts
strfry/plugins/tests/: broadcast_vanish_requests.test.ts  run_deno_tests.sh  run_tests.sh  test.ts
