[package]
name = "spam_filter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
nostr-sdk = "0.35.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "spam_cleaner"
path = "src/bin/spam_cleaner.rs"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
